--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
+    <title>HOME</title>
     <link rel="icon" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="customize.css">
@@ -12,11 +12,11 @@
 
 <body class="d-flex h-100 text-center text-white bg-dark">
 
-<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+<div class="cover-container d-flex w-100 h-100 mx-auto flex-column">
     <header class="mb-auto">
-        <nav class="navbar navbar-expand-md navbar-dark float-md-end fixed-top" style="background-color: rgba(255,255,255,0.5)">
+        <nav class="navbar navbar-expand-md navbar-dark float-md-end fixed-top" style="background-color: rgba(0,0,0,0.3); height: 50px">
             <div class="container opacity-100">
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand text-dark" href="index.html">
                     CYBER CORE
                 </a>
                 <button class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around"
@@ -86,11 +86,21 @@
         </nav>
     </header>
 
-    <main class="px-3">
 
+    <header class="bg-light" style="height: 50px"></header>
+
+    <main>
+        <section class="bg-primary" style="height: 100vh">
+
+        </section>
+        <section class="bg-danger" style="height: 100vh">
+
+        </section>
+        <section class="bg-warning" style="height: 100vh">
+
+        </section>
     </main>
-
-    <footer class="mt-auto text-white-50">
+    <footer class="mt-auto text-white-50 bg-success" style="height: 20vh">
 
     </footer>
 
