--- a/index.html
+++ b/index.html
@@ -5,18 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOME</title>
     <link rel="icon" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="customize.css">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">    <link rel="stylesheet" href="customize.css">
 </head>
 
-<body class="d-flex h-100 text-center text-white bg-dark">
+<body class="d-flex h-100 text-center text-white bg-dark" style="font: 12px '.AppleSystemUIFont'">
 
 <div class="cover-container d-flex w-100 h-100 mx-auto flex-column">
     <header class="mb-auto">
-        <nav class="navbar navbar-expand-md navbar-dark float-md-end fixed-top" style="background-color: rgba(0,0,0,0.3); height: 50px">
-            <div class="container opacity-100">
-                <a class="navbar-brand text-dark" href="index.html">
+        <nav class="navbar navbar-expand-md navbar-dark float-md-end fixed-top" style="background-color: rgba(0,0,0,0.7); height: 50px">
+            <div class="container opacity-100" id="navContainer">
+                <a class="navbar-brand text-light" style="font-size: 12px" href="index.html">
                     CYBER CORE
                 </a>
                 <button class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around"
@@ -91,13 +89,30 @@
 
     <main>
         <section class="bg-primary" style="height: 100vh">
-
+            <img class="img-fluid h-100 w-100 p-0" src="#" alt="">
         </section>
-        <section class="bg-danger" style="height: 100vh">
 
+        <section class="bg-light" style="height: 100vh;">
+            <div class="container-fluid h-100 w-100 p-0" id="gridContainer">
+                <div class="row row-cols-2 h-100 w-100 m-0">
+                    <div class="col bg-dark p-0">
+                        <img class="img-fluid h-100 w-100 p-3" src="#" alt="">
+                    </div>
+                    <div class="col bg-success p-0">
+                        <img class="img-fluid h-100 w-100 p-3" src="#" alt="">
+                    </div>
+                    <div class="col bg-danger p-0">
+                        <img class="img-fluid h-100 w-100 p-3" src="#" alt="">
+                    </div>
+                    <div class="col bg-warning p-0">
+                        <img class="img-fluid h-100 w-100 p-3" src="#" alt="">
+                    </div>
+                </div>
+            </div>
         </section>
+
         <section class="bg-warning" style="height: 100vh">
-
+            <img class="img-fluid h-100 w-100 p-0" src="#" alt="">
         </section>
     </main>
     <footer class="mt-auto text-white-50 bg-success" style="height: 20vh">
