--- a/contact.html
+++ b/contact.html
@@ -5,64 +5,142 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="customize.css">
     <title>Contact</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="customize.css">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGVlLxUxUYwDE1RsMQfZbmcyj_lGzCUck&callback=initMap" async defer></script>
 </head>
-<body>
-   <div id="container">
-        <h1>Get in touch</h1>
-        
-        <!--map and text-->
-        <div id="map-and-text-container">
-            <div id="map-container">
-                <div id="map"></div>
-            </div>
 
-            <div id="text-container">
-                <div id="text">
-                    <h2>Headquarters</h2>
-                    <p>95 N 300 W, Salt Lake City, UT 84101</p><br>
-                    <h2>Phone</h2>
-                    <p>(801) 524-8100</p><br>
-                    <h2>Email</h2>
-                    <p>contact@cybercore.com</p>
+<body class="d-flex h-100 text-center text-dark bg-light" style="font: 12px '.AppleSystemUIFont'">
+<div class="cover-container d-flex w-100 h-100 mx-auto flex-column">
+    <header class="mb-auto">
+        <nav class="navbar navbar-expand-md navbar-dark float-md-end fixed-top" style="background-color: rgba(0,0,0,0.7);">
+            <div class="container opacity-100" id="navContainer">
+                <a class="navbar-brand text-light" style="font-size: 12px" href="index.html">
+                    CYBER CORE
+                </a>
+                <button class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around"
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#navbarCollapse"
+                        aria-controls="#navbarCollapse"
+                        aria-expanded="false"
+                        aria-label="Toggle navigation">
+                    <span class="toggler-icon top-bar"></span>
+                    <span class="toggler-icon middle-bar"></span>
+                    <span class="toggler-icon bottom-bar"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="index.html">
+                                HOME
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                PRODUCT
+                            </a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle"
+                               id="navbarDropdown"
+                               role="button"
+                               data-bs-toggle="dropdown"
+                               aria-expanded="false"
+                               href="#">
+                                TEAM
+                            </a>
+                            <ul class="dropdown-menu"
+                                aria-labelledby="navbarDropdown">
+                                <li>
+                                    <a href="#" class="dropdown-item">
+                                        PABLO
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" class="dropdown-item">
+                                        RIE
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" class="dropdown-item">
+                                        FRANK
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                CONTACT
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                ABOUT US
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
+        </nav>
+    </header>
+
+    <header class="bg-light"></header>
+
+    <h1>Get in touch</h1>
+
+    <!--map and text-->
+    <div id="map-and-text-container">
+        <div id="map-container">
+            <div id="map"></div>
         </div>
 
-        <!--three boxes under the map-->
-        <div id="additional-boxes">
-            <div class="additional-box">
-                <h2>Sales</h2>
-                <p>Let's chat with our sales team.</p>
-                <button>Contact Sales</button>
-            </div>
-            <div class="additional-box">
-                <h2>Help & Support</h2>
-                <p>Have questions? We are here for you!</p>
-                <button>Get Support</button>
-            </div>
-            <div class="additional-box">
-                <h2>Resources</h2>
-                <p>Get news, company info, and resources.</p>
-                <button>Visit Resources</button>
+        <div id="text-container">
+            <div id="text">
+                <h2>Headquarters</h2>
+                <p>95 N 300 W, Salt Lake City, UT 84101</p><br>
+                <h2>Phone</h2>
+                <p>(801) 524-8100</p><br>
+                <h2>Email</h2>
+                <p>contact@cybercore.com</p>
             </div>
         </div>
-
     </div>
+
+    <!--three boxes under the map-->
+    <div id="additional-boxes">
+        <div class="additional-box">
+            <h2>Sales</h2>
+            <p>Let's chat with our sales team.</p>
+            <button>Contact Sales</button>
+        </div>
+        <div class="additional-box">
+            <h2>Help & Support</h2>
+            <p>Have questions? We are here for you!</p>
+            <button>Get Support</button>
+        </div>
+        <div class="additional-box">
+            <h2>Resources</h2>
+            <p>Get news, company info, and resources.</p>
+            <button>Visit Resources</button>
+        </div>
+    </div>
+
+</div>
 
     <script>
         function initMap() {
             // Coordinates for the address
             var addressCoordinates = { lat: 40.7712, lng: -111.9002 };
 
-            // Create a new map 
+            // Create a new map
             var map = new google.maps.Map(document.getElementById('map'), {
                 center: addressCoordinates,
                 zoom: 17
             });
 
-            // Add a marker 
+            // Add a marker
             var marker = new google.maps.Marker({
                 position: addressCoordinates,
                 map: map,
