--- a/team.html
+++ b/team.html
@@ -5,17 +5,92 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="customize.css">
     <title>Team</title>
+  <link rel="icon" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="stylesheet" href="customize.css">
 </head>
-<style>
-  @import url(https://fonts.googleapis.com/css?family=Roboto:300,400);
-  @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css);
-  body {
-    text-align: center;
-    margin: 4%; 
-  }
-</style>
 
-<body>
+
+<body class="d-flex h-100 text-center text-black bg-light" style="font: 12px '.AppleSystemUIFont'">
+
+<div class="cover-container d-flex w-100 h-100 mx-auto flex-column">
+  <header class="mb-auto">
+    <nav class="navbar navbar-expand-md navbar-dark float-md-end fixed-top" style="background-color: rgba(0,0,0,0.7);">
+      <div class="container opacity-100" id="navContainer">
+        <a class="navbar-brand text-light" style="font-size: 12px" href="index.html">
+          CYBER CORE
+        </a>
+        <button class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarCollapse"
+                aria-controls="#navbarCollapse"
+                aria-expanded="false"
+                aria-label="Toggle navigation">
+          <span class="toggler-icon top-bar"></span>
+          <span class="toggler-icon middle-bar"></span>
+          <span class="toggler-icon bottom-bar"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">
+                HOME
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                PRODUCT
+              </a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle"
+                 id="navbarDropdown"
+                 role="button"
+                 data-bs-toggle="dropdown"
+                 aria-expanded="false"
+                 href="#">
+                TEAM
+              </a>
+              <ul class="dropdown-menu"
+                  aria-labelledby="navbarDropdown">
+                <li>
+                  <a href="#" class="dropdown-item">
+                    PABLO
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="dropdown-item">
+                    RIE
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="dropdown-item">
+                    FRANK
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                CONTACT
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                ABOUT US
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+
+  <header class="bg-light"></header>
+
+
     <h1>Meet Our Team</h1>
   <div class="container">
     <div class="image-container">
@@ -74,5 +149,6 @@
       <button type="submit">Submit</button>
     </div>
   </div>
+</div>
 </body>
 </html>
