--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
                                role="button"
                                data-bs-toggle="dropdown"
                                aria-expanded="false"
-                               href="#">
+                               href="team.html">
                                 TEAM
                             </a>
                             <ul class="dropdown-menu"
@@ -71,12 +71,12 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="contact.html">
                                 CONTACT
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="about.html">
                                 ABOUT US
                             </a>
                         </li>
