--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,6 @@
     <title>Contact</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="customize.css">
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGVlLxUxUYwDE1RsMQfZbmcyj_lGzCUck&callback=initMap" async defer></script>
 </head>
 
 <body class="d-flex h-100 text-center text-dark bg-light" style="font: 12px '.AppleSystemUIFont'">
@@ -17,7 +15,7 @@
         <nav class="navbar navbar-expand-md navbar-dark float-md-end fixed-top" style="background-color: rgba(0,0,0,0.7);">
             <div class="container opacity-100" id="navContainer">
                 <a class="navbar-brand text-light" style="font-size: 12px" href="index.html">
-                    CYBER CORE
+                    <img class="m-0 p-0" src="images/company_logo_light.png" alt="" style="height: 45px;">
                 </a>
                 <button class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around"
                         type="button"
@@ -86,7 +84,7 @@
         </nav>
     </header>
 
-    <header class="bg-light"></header>
+    <header class="bg-light" style="height: 71px"></header>
 
     <h1>Get in touch</h1>
 
@@ -148,6 +146,10 @@
             });
         }
     </script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGVlLxUxUYwDE1RsMQfZbmcyj_lGzCUck&callback=initMap" async defer></script>
 
 </body>
 </html>
