--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-expand-md navbar-dark float-md-end fixed-top" style="background-color: rgba(0,0,0,0.7);">
             <div class="container opacity-100" id="navContainer">
                 <a class="navbar-brand text-light" style="font-size: 12px" href="index.html">
-                    CYBER CORE
+                    <img class="m-0 p-0" src="images/company_logo_light.png" alt="" style="height: 45px;">
                 </a>
                 <button class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around"
                         type="button"
@@ -85,34 +85,36 @@
         </nav>
     </header>
 
-    <header class="bg-light"></header>
+    <header class="bg-light" style="height: 71px"></header>
 
     <main>
-        <section class="bg-primary" style="height: 100vh">
-            <img class="img-fluid h-100 w-100 p-0" src="#" alt="">
+        <section class="bg-light pb-1" style="height: 100%">
+            <img class="img-fluid h-100 w-100 p-0" src="images/Macbook_Repair.huge" style="object-fit: cover" alt="">
+            <p style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">Hello</p>
+            <button type="button"  style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">Click Me</button>
         </section>
 
-        <section class="bg-light" style="height: 100vh;">
+        <section class="bg-light" style="height: 100%;">
             <div class="container-fluid h-100 w-100 p-0" id="gridContainer">
-                <div class="row row-cols-2 h-100 w-100 m-0">
-                    <div class="col bg-dark p-0">
-                        <img class="img-fluid h-100 w-100 p-3" src="#" alt="">
+                <div class="row row-cols-1 row-cols-md-2 h-100 w-100 m-0">
+                    <div class="col bg-light p-0" style="object-fit: cover">
+                        <img class="img-fluid h-100 w-100 p-1" src="images/Apple_Watch_Repair.webp" alt="">
                     </div>
-                    <div class="col bg-success p-0">
-                        <img class="img-fluid h-100 w-100 p-3" src="#" alt="">
+                    <div class="col bg-light p-0" style="object-fit: cover">
+                        <img class="img-fluid h-100 w-100 p-1" src="images/Apple_Pencil_Repair.jpeg" alt="">
                     </div>
-                    <div class="col bg-danger p-0">
-                        <img class="img-fluid h-100 w-100 p-3" src="#" alt="">
+                    <div class="col bg-light p-0" style="object-fit: cover">
+                        <img class="img-fluid h-100 w-100 p-1" src="images/AirPods_Repair.webp" alt="">
                     </div>
-                    <div class="col bg-warning p-0">
-                        <img class="img-fluid h-100 w-100 p-3" src="#" alt="">
+                    <div class="col bg-light p-0" style="object-fit: cover">
+                        <img class="img-fluid h-100 w-100 p-1" src="images/iPad_Repair.jpeg" alt="">
                     </div>
                 </div>
             </div>
         </section>
 
-        <section class="bg-warning" style="height: 100vh">
-            <img class="img-fluid h-100 w-100 p-0" src="#" alt="">
+        <section class="bg-light pt-1" style="height: 100%">
+            <img class="img-fluid h-100 w-100 p-0" src="images/iPhone_Repair.jpeg" alt="">
         </section>
     </main>
     <footer class="mt-auto text-white-50 bg-success" style="height: 20vh">
@@ -121,8 +123,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </div>
-
-
 
 </body>
 </html>
