--- a/team.html
+++ b/team.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-expand-md navbar-dark float-md-end fixed-top" style="background-color: rgba(0,0,0,0.7);">
       <div class="container opacity-100" id="navContainer">
         <a class="navbar-brand text-light" style="font-size: 12px" href="index.html">
-          CYBER CORE
+          <img class="m-0 p-0" src="images/company_logo_light.png" alt="" style="height: 45px;">
         </a>
         <button class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around"
                 type="button"
@@ -88,7 +88,7 @@
   </header>
 
 
-  <header class="bg-light"></header>
+  <header class="bg-light" style="height: 71px;"></header>
 
 
     <h1>Meet Our Team</h1>
@@ -150,5 +150,8 @@
     </div>
   </div>
 </div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 </body>
 </html>
