--- a/About.html
+++ b/About.html
@@ -37,8 +37,8 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                PRODUCT
+                            <a class="nav-link" href="team.html">
+                                TEAM
                             </a>
                         </li>
                         <li class="nav-item dropdown">
@@ -48,34 +48,34 @@
                                data-bs-toggle="dropdown"
                                aria-expanded="false"
                                href="#">
-                                TEAM
+                                SERVICE
                             </a>
                             <ul class="dropdown-menu"
                                 aria-labelledby="navbarDropdown">
                                 <li>
                                     <a href="#" class="dropdown-item">
-                                        PABLO
+                                        MAC REPAIR
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#" class="dropdown-item">
-                                        RIE
+                                        ACCESSORIES REPAIR
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#" class="dropdown-item">
-                                        FRANK
+                                        IPHONE REPAIR
                                     </a>
                                 </li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="contact.html">
                                 CONTACT
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="About.html">
                                 ABOUT US
                             </a>
                         </li>
@@ -85,35 +85,23 @@
         </nav>
     </header>
 
-
-    <header class="bg-light" style="height: 71px"></header>
-
     <main>
-        <section class="bg-primary" style="height: 100vh">
-            <img class="img-fluid h-100 w-100 p-0" src="#" alt="">
-        </section>
-
-        <section class="bg-light" style="height: 100vh;">
-            <div class="container-fluid h-100 w-100 p-0" id="gridContainer">
-                <div class="row row-cols-2 h-100 w-100 m-0">
-                    <div class="col bg-dark p-0">
-                        <img class="img-fluid h-100 w-100 p-3" src="#" alt="">
-                    </div>
-                    <div class="col bg-success p-0">
-                        <img class="img-fluid h-100 w-100 p-3" src="#" alt="">
-                    </div>
-                    <div class="col bg-danger p-0">
-                        <img class="img-fluid h-100 w-100 p-3" src="#" alt="">
-                    </div>
-                    <div class="col bg-warning p-0">
-                        <img class="img-fluid h-100 w-100 p-3" src="#" alt="">
-                    </div>
-                </div>
+        <section class="first-section bg-light" style="height: 100vh;">
+            <div class="p-0 m-0 w-100 h-100 d-flex position-relative justify-content-start text-dark"
+                 style="object-fit: cover; background-image: url(images/About_Us_1.png); height: 100vh; width: 100vh; background-size: cover">
+                <h1 id="DiscountCode"
+                    class="position-absolute m-5"
+                    style="top:17%" >
+                    About CyberCore
+                </h1>
+                <h5 class="position-absolute m-5"
+                    style="top: 30%; width:60vh; line-height:4.5vh; text-align: left">
+                    Founded in 2005, CyberCore specializes in Apple product repairs, combining technical expertise with a passion for technology.
+                    Our experienced technicians are adept at handling everything from iPhones to MacBooks, ensuring your devices are swiftly and effectively restored to their best condition.
+                    At CyberCore, we're more than just repair specialists; we're dedicated to delivering exceptional service and building lasting relationships with our customers.
+                    Trust us to keep your Apple devices performing at their peak.
+                </h5>
             </div>
-        </section>
-
-        <section class="bg-warning" style="height: 100vh">
-            <img class="img-fluid h-100 w-100 p-0" src="#" alt="">
         </section>
     </main>
     <footer class="mt-auto text-white-50 bg-success" style="height: 20vh">
