--- a/team.html
+++ b/team.html
@@ -39,8 +39,8 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">
-                PRODUCT
+              <a class="nav-link" href="team.html">
+                TEAM
               </a>
             </li>
             <li class="nav-item dropdown">
@@ -50,34 +50,34 @@
                  data-bs-toggle="dropdown"
                  aria-expanded="false"
                  href="#">
-                TEAM
+                SERVICE
               </a>
               <ul class="dropdown-menu"
                   aria-labelledby="navbarDropdown">
                 <li>
                   <a href="#" class="dropdown-item">
-                    PABLO
+                    MAC REPAIR
                   </a>
                 </li>
                 <li>
                   <a href="#" class="dropdown-item">
-                    RIE
+                    ACCESSORIES REPAIR
                   </a>
                 </li>
                 <li>
                   <a href="#" class="dropdown-item">
-                    FRANK
+                    IPHONE REPAIR
                   </a>
                 </li>
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="contact.html">
                 CONTACT
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="About.html">
                 ABOUT US
               </a>
             </li>
