--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                PRODUCT
+                            <a class="nav-link" href="team.html">
+                                TEAM
                             </a>
                         </li>
                         <li class="nav-item dropdown">
@@ -51,24 +51,24 @@
                                role="button"
                                data-bs-toggle="dropdown"
                                aria-expanded="false"
-                               href="team.html">
-                                TEAM
+                               href="#">
+                                SERVICE
                             </a>
                             <ul class="dropdown-menu"
                                 aria-labelledby="navbarDropdown">
                                 <li>
                                     <a href="#" class="dropdown-item">
-                                        PABLO
+                                        MAC REPAIR
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#" class="dropdown-item">
-                                        RIE
+                                        ACCESSORIES REPAIR
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#" class="dropdown-item">
-                                        FRANK
+                                        IPHONE REPAIR
                                     </a>
                                 </li>
                             </ul>
