--- a/contact.html
+++ b/contact.html
@@ -49,20 +49,20 @@
                                href="#">
                                 SERVICE
                             </a>
-                            <ul class="dropdown-menu"
+                            <ul class="dropdown-menu dropdown-menu-dark rounded-3 gap-1 shadow" style="background-color: rgba(0,0,0,0.7)"
                                 aria-labelledby="navbarDropdown">
                                 <li>
-                                    <a href="#" class="dropdown-item">
+                                    <a href="#" class="dropdown-item rounded-2 py-1">
                                         MAC REPAIR
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" class="dropdown-item">
+                                    <a href="#" class="dropdown-item rounded-2 py-1">
                                         ACCESSORIES REPAIR
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" class="dropdown-item">
+                                    <a href="#" class="dropdown-item rounded-2 py-1">
                                         IPHONE REPAIR
                                     </a>
                                 </li>
