--- a/index.html
+++ b/index.html
@@ -57,17 +57,17 @@
                             <ul class="dropdown-menu dropdown-menu-dark rounded-3 gap-1 shadow" style="background-color: rgba(0,0,0,0.7)"
                                 aria-labelledby="navbarDropdown">
                                 <li>
-                                    <a href="#" class="dropdown-item rounded-2 py-1">
+                                    <a href="macRepair.html" class="dropdown-item rounded-2 py-1">
                                         MAC REPAIR
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" class="dropdown-item rounded-2 py-1">
+                                    <a href="accessoriesRepair.html" class="dropdown-item rounded-2 py-1">
                                         ACCESSORIES REPAIR
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" class="dropdown-item rounded-2 py-1">
+                                    <a href="iPhoneRepair.html" class="dropdown-item rounded-2 py-1">
                                         IPHONE REPAIR
                                     </a>
                                 </li>
@@ -188,76 +188,77 @@
         </section>
     </main>
 
-    <footer class="py-5 px-5 bg-dark text-white" >
+ <!-- Footer -->
+<footer class="py-5 px-5 bg-dark text-white">
+    <div class="container">
         <div class="row">
-            <div class="col-6 col-md-2 mb-3">
-                <h5>Section</h5>
-                <ul class="nav flex-column">
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Home</a></li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Features</a></li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Pricing</a></li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">FAQs</a></li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">About</a></li>
-                </ul>
+            <div class="col-md-6">
+                <div class="copyright">
+                    <p>&copy; 2023 Cybercore Technology, Inc. All rights reserved.</p>
+                    <p id="datetime"></p>
+                </div>
             </div>
-
-            <div class="col-6 col-md-2 mb-3">
-                <h5>Section</h5>
-                <ul class="nav flex-column">
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Home</a></li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Features</a></li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Pricing</a></li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">FAQs</a></li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">About</a></li>
-                </ul>
-            </div>
-
-            <div class="col-6 col-md-2 mb-3">
-                <h5>Section</h5>
-                <ul class="nav flex-column">
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Home</a></li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Features</a></li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Pricing</a></li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">FAQs</a></li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">About</a></li>
-                </ul>
-            </div>
-
-            <div class="col-md-5 offset-md-1 mb-3">
-                <form>
-                    <h5>Subscribe to our newsletter</h5>
-                    <p>Monthly digest of what's new and exciting from us.</p>
-                    <div class="d-flex flex-column flex-sm-row w-100 gap-2">
-                        <label for="newsletter1" class="visually-hidden">Email address</label>
-                        <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
-                        <button class="btn btn-primary" type="button">Subscribe</button>
+            <div class="col-md-6">
+                <div class="d-flex justify-content-between">
+                    <div class="social-media">
+                        <p class="mb-4">Connect with us on social media:</p>
+                        <div class="social-media-icons">
+                            <a href="https://www.facebook.com/"><img src="images/facebook.png" alt="Facebook"></a>
+                            <a href="https://twitter.com/?lang=en"><img src="images/logotipo-de-twitter.png" alt="Twitter"></a>
+                            <a href="https://www.instagram.com/"><img src="images/instagram.png" alt="Instagram"></a>
+                        </div>
                     </div>
-                </form>
+
+                    <div class="col-6 col-md-4 mb-3">
+                        <form class="subscribe-form mt-3">
+                            <h5>Subscribe to our newsletter</h5>
+                            <p>Monthly digest of what's new and exciting from us.</p>
+                            <div class="d-flex flex-column w-100 gap-2">
+                                <label for="newsletter1" class="visually-hidden">Email address</label>
+                                <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
+                                <button class="btn btn-primary mt-2" type="button">Subscribe</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
 
-        <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
-            <p>© 2022 Company, Inc. All rights reserved.</p>
-            <ul class="list-unstyled d-flex">
-                <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
-                <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
-                <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
-            </ul>
+        <div class="row mt-4">
+            <div class="col-md-6">
+                <ul class="list-unstyled d-flex justify-content-end">
+                    <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
+                    <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
+                    <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
+                </ul>
+            </div>
         </div>
-    </footer>
 
-    <script>
-        $(document).ready(function() {
-            $('#DiscountCode').click(function() {
-                let text = "HOLIDAY";
-                navigator.clipboard.writeText(text).then(function() {
-                    alert('Discount code copied');
-                }, function(err) {
-                    alert('Failed to copy text: ', err);
-                });
-            });
-        });
-    </script>
+        <div class="row mt-4">
+            <div class="col-md-6">
+                <h5>Quick links</h5>
+                <ul class="nav flex-column">
+                    <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-white">Home</a></li>
+                    <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-white">Features</a></li>
+                    <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-white">Pricing</a></li>
+                    <li class="nav-item mb-2"><a href="service.html" class="nav-link p-0 text-white">FAQs</a></li>
+                    <li class="nav-item mb-2"><a href="About.html" class="nav-link p-0 text-white">About</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
+
+<script>
+    // JavaScript Automated Date 
+    function updateDateTime() {
+        var currentDateTime = new Date();
+        var formattedDateTime = currentDateTime.toLocaleString();
+        document.getElementById('datetime').innerHTML = formattedDateTime;
+    }
+
+    setInterval(updateDateTime, 1000);
+</script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </div>
