--- a/iPhoneRepair.html
+++ b/iPhoneRepair.html
@@ -3,14 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="customize.css">
-    <title>Contact</title>
+    <title>HOME</title>
+    <link rel="icon" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="customize.css">
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
 </head>
 
-<body class="d-flex h-100 text-center text-dark bg-light" style="font: 12px '.AppleSystemUIFont'">
-<div class="cover-container d-flex w-100 h-100 mx-auto flex-column">
+<body class="d-flex h-100 text-white bg-dark" style="font: 12px '.AppleSystemUIFont'">
+
+<div class="cover-container d-flex w-100 h-100 mx-auto flex-column" style="background-color: rgba(0,0,0,0.7)">
     <header class="mb-auto">
         <nav class="navbar navbar-expand-md navbar-dark float-md-end fixed-top" style="background-color: rgba(0,0,0,0.7);">
             <div class="container opacity-100" id="navContainer">
@@ -86,44 +91,28 @@
 
     <header class="bg-light" style="height: 71px"></header>
 
-    <h1>Get in touch</h1>
-
-    <!--map and text-->
-    <div id="map-and-text-container">
-        <div id="map-container">
-            <div id="map"></div>
-        </div>
-
-        <div id="text-container">
-            <div id="text">
-                <h2>Headquarters</h2>
-                <p>95 N 300 W, Salt Lake City, UT 84101</p><br>
-                <h2>Phone</h2>
-                <p>(801) 524-8100</p><br>
-                <h2>Email</h2>
-                <p>contact@cybercore.com</p>
-            </div>
+    <!-- iPhone Repair Section -->
+    <div class="container mt-5">
+        <div class="first-section">
+            <h2>iPhone Repair</h2>
+            <img src="images/iPhone_Repair.jpeg" alt="iPhone Repair Image">
+            <button onclick="displayProductDetails('iPhone')">View Details</button>
         </div>
     </div>
 
-    <!--three boxes under the map-->
-    <div id="additional-boxes">
-        <div class="additional-box">
-            <h2>Sales</h2>
-            <p>Let's chat with our sales team.</p>
-            <button>Contact Sales</button>
-        </div>
-        <div class="additional-box">
-            <h2>Help & Support</h2>
-            <p>Have questions? We are here for you!</p>
-            <button>Get Support</button>
-        </div>
-        <div class="additional-box">
-            <h2>Resources</h2>
-            <p>Get news, company info, and resources.</p>
-            <button>Visit Resources</button>
-        </div>
-    </div>
+    <script>
+        // JavaScript array for product repair
+        var productDetails = {
+            'iPhone': {
+                'name': 'iPhone Repair Service',
+                'description': 'We repair your iPhone!'
+            }
+        };
+
+        function displayProductDetails(product) {
+            alert(productDetails[product].name + '\n\n' + productDetails[product].description);
+        }
+    </script>
 
 <!-- Footer -->
 <footer class="py-5 px-5 bg-dark text-white">
@@ -197,10 +186,7 @@
     setInterval(updateDateTime, 1000);
 </script>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGVlLxUxUYwDE1RsMQfZbmcyj_lGzCUck&callback=initMap" async defer></script>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-pzjw8f+9PEA8E3p6rKKnK2sZtW07RPZcu3N7WWWg5q1QIqrnjOyqQ1LQGxXuIhH" crossorigin="anonymous"></script>
 </body>
-</html>
 
+</html>
