--- a/index.html
+++ b/index.html
@@ -46,16 +46,15 @@
                             </a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle"
-                               id="navbarDropdown"
+                            <a id="serviceLink" class="nav-link dropdown-toggle"
                                role="button"
                                data-bs-toggle="dropdown"
                                aria-expanded="false"
                                href="#">
                                 SERVICE
                             </a>
-                            <ul class="dropdown-menu dropdown-menu-dark rounded-3 gap-1 shadow" style="background-color: rgba(0,0,0,0.7)"
-                                aria-labelledby="navbarDropdown">
+                            <ul id="serviceDropdown" class="dropdown-menu dropdown-menu-dark rounded-3 gap-1 shadow" style="background-color: rgba(0,0,0,0.7)"
+                                aria-labelledby="serviceLink">
                                 <li>
                                     <a href="macRepair.html" class="dropdown-item rounded-2 py-1">
                                         MAC REPAIR
@@ -105,7 +104,7 @@
                     Macbook Repair
                 </h2>
                 <a class="position-absolute"
-                   href="#"
+                   href="macRepair.html"
                    style="top: 80%">
                     <button type="button">
                         Learn more
@@ -126,7 +125,7 @@
                             Apple Watch Repair
                         </h2>
                         <a class="position-absolute"
-                           href="#"
+                           href="accessoriesRepair.html"
                            style="top: 85%; text-decoration: none; color: #c1ced9">
                             Learn more <i class="fa-solid fa-angle-right"></i>
                         </a>
@@ -138,7 +137,7 @@
                             Apple Pencil Repair
                         </h2>
                         <a class="position-absolute"
-                           href="#"
+                           href="accessoriesRepair.html"
                            style="top: 85%; text-decoration: none; color: #c1ced9">
                             Learn more <i class="fa-solid fa-angle-right"></i>
                         </a>
@@ -150,7 +149,7 @@
                             Airpods Repair
                         </h2>
                         <a class="position-absolute"
-                           href="#"
+                           href="accessoriesRepair.html"
                            style="top: 85%; text-decoration: none; color: #c1ced9">
                             Learn more <i class="fa-solid fa-angle-right"></i>
                         </a>
@@ -162,7 +161,7 @@
                             iPad Repair
                         </h2>
                         <a class="position-absolute"
-                           href="#"
+                           href="iPhoneRepair.html"
                            style="top: 85%; text-decoration: none; color: #c1ced9">
                             Learn more <i class="fa-solid fa-angle-right"></i>
                         </a>
