--- a/macRepair.html
+++ b/macRepair.html
@@ -45,16 +45,15 @@
                             </a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle"
-                               id="navbarDropdown"
+                            <a id="serviceLink" class="nav-link dropdown-toggle"
                                role="button"
                                data-bs-toggle="dropdown"
                                aria-expanded="false"
                                href="#">
                                 SERVICE
                             </a>
-                            <ul class="dropdown-menu dropdown-menu-dark rounded-3 gap-1 shadow" style="background-color: rgba(0,0,0,0.7)"
-                                aria-labelledby="navbarDropdown">
+                            <ul id="serviceDropdown" class="dropdown-menu dropdown-menu-dark rounded-3 gap-1 shadow" style="background-color: rgba(0,0,0,0.7)"
+                                aria-labelledby="serviceLink">
                                 <li>
                                     <a href="macRepair.html" class="dropdown-item rounded-2 py-1">
                                         MAC REPAIR
