--- a/accessoriesRepair.html
+++ b/accessoriesRepair.html
@@ -14,8 +14,8 @@
 </head>
 
 <body class="d-flex h-100 text-white bg-dark" style="font: 12px '.AppleSystemUIFont'">
+<div class="cover-container d-flex w-100 h-100 mx-auto flex-column">
 
-<div class="cover-container d-flex w-100 h-100 mx-auto flex-column" style="background-color: rgba(0,0,0,0.7)">
     <header class="mb-auto">
         <nav class="navbar navbar-expand-md navbar-dark float-md-end fixed-top" style="background-color: rgba(0,0,0,0.7);">
             <div class="container opacity-100" id="navContainer">
@@ -114,81 +114,84 @@
         }
     </script>
 
-<!-- Footer -->
-<footer class="py-5 px-5 bg-dark text-white">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="copyright">
-                    <p>&copy; 2023 Cybercore Technology, Inc. All rights reserved.</p>
-                    <p id="datetime"></p>
+    <!-- Footer -->
+    <footer class="py-5 px-5 bg-dark text-white">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="copyright">
+                        <p>&copy; 2023 Cybercore Technology, Inc. All rights reserved.</p>
+                        <p id="datetime"></p>
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-6">
-                <div class="d-flex justify-content-between">
-                    <div class="social-media">
-                        <p class="mb-4">Connect with us on social media:</p>
-                        <div class="social-media-icons">
-                            <a href="https://www.facebook.com/"><img src="images/facebook.png" alt="Facebook"></a>
-                            <a href="https://twitter.com/?lang=en"><img src="images/logotipo-de-twitter.png" alt="Twitter"></a>
-                            <a href="https://www.instagram.com/"><img src="images/instagram.png" alt="Instagram"></a>
+                <div class="col-md-6">
+                    <div class="d-flex justify-content-between">
+                        <div class="social-media">
+                            <p class="mb-4">Connect with us on social media:</p>
+                            <div class="social-media-icons">
+                                <a href="https://www.facebook.com/"><img src="images/facebook.png" alt="Facebook"></a>
+                                <a href="https://twitter.com/?lang=en"><img src="images/logotipo-de-twitter.png" alt="Twitter"></a>
+                                <a href="https://www.instagram.com/"><img src="images/instagram.png" alt="Instagram"></a>
+                            </div>
+                        </div>
+
+                        <div class="col-6 col-md-4 mb-3">
+                            <form class="subscribe-form mt-3">
+                                <h5>Subscribe to our newsletter</h5>
+                                <p>Monthly digest of what's new and exciting from us.</p>
+                                <div class="d-flex flex-column w-100 gap-2">
+                                    <label for="newsletter1" class="visually-hidden">Email address</label>
+                                    <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
+                                    <button class="btn btn-primary mt-2" type="button">Subscribe</button>
+                                </div>
+                            </form>
                         </div>
                     </div>
+                </div>
+            </div>
 
-                    <div class="col-6 col-md-4 mb-3">
-                        <form class="subscribe-form mt-3">
-                            <h5>Subscribe to our newsletter</h5>
-                            <p>Monthly digest of what's new and exciting from us.</p>
-                            <div class="d-flex flex-column w-100 gap-2">
-                                <label for="newsletter1" class="visually-hidden">Email address</label>
-                                <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
-                                <button class="btn btn-primary mt-2" type="button">Subscribe</button>
-                            </div>
-                        </form>
-                    </div>
+            <div class="row mt-4">
+                <div class="col-md-6">
+                    <ul class="list-unstyled d-flex justify-content-end">
+                        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
+                        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
+                        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="row mt-4">
+                <div class="col-md-6">
+                    <h5>Quick links</h5>
+                    <ul class="nav flex-column">
+                        <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-white">Home</a></li>
+                        <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-white">Features</a></li>
+                        <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-white">Pricing</a></li>
+                        <li class="nav-item mb-2"><a href="service.html" class="nav-link p-0 text-white">FAQs</a></li>
+                        <li class="nav-item mb-2"><a href="About.html" class="nav-link p-0 text-white">About</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
+    </footer>
 
-        <div class="row mt-4">
-            <div class="col-md-6">
-                <ul class="list-unstyled d-flex justify-content-end">
-                    <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
-                    <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
-                    <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
-                </ul>
-            </div>
-        </div>
+    <script>
+        // JavaScript Automated Date
+        function updateDateTime() {
+            var currentDateTime = new Date();
+            var formattedDateTime = currentDateTime.toLocaleString();
+            document.getElementById('datetime').innerHTML = formattedDateTime;
+        }
 
-        <div class="row mt-4">
-            <div class="col-md-6">
-                <h5>Quick links</h5>
-                <ul class="nav flex-column">
-                    <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-white">Home</a></li>
-                    <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-white">Features</a></li>
-                    <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-white">Pricing</a></li>
-                    <li class="nav-item mb-2"><a href="service.html" class="nav-link p-0 text-white">FAQs</a></li>
-                    <li class="nav-item mb-2"><a href="About.html" class="nav-link p-0 text-white">About</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</footer>
-
-<script>
-    // JavaScript Automated Date 
-    function updateDateTime() {
-        var currentDateTime = new Date();
-        var formattedDateTime = currentDateTime.toLocaleString();
-        document.getElementById('datetime').innerHTML = formattedDateTime;
-    }
-
-    setInterval(updateDateTime, 1000);
-</script>
-
+        setInterval(updateDateTime, 1000);
+    </script>
+</div>
 <!-- Bootstrap JS and other scripts go here -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+</div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-pzjw8f+9PEA8E3p6rKKnK2sZtW07RPZcu3N7WWWg5q1QIqrnjOyqQ1LQGxXuIhH" crossorigin="anonymous"></script>
+
+
 </body>
 
 </html>
