--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     Macbook Repair
                 </h2>
                 <a class="position-absolute"
-                   href="#"
+                   href="macRepair.html"
                    style="top: 80%">
                     <button type="button">
                         Learn more
@@ -126,7 +126,7 @@
                             Apple Watch Repair
                         </h2>
                         <a class="position-absolute"
-                           href="#"
+                           href="accessoriesRepair.html"
                            style="top: 85%; text-decoration: none; color: #c1ced9">
                             Learn more <i class="fa-solid fa-angle-right"></i>
                         </a>
@@ -138,7 +138,7 @@
                             Apple Pencil Repair
                         </h2>
                         <a class="position-absolute"
-                           href="#"
+                           href="accessoriesRepair.html"
                            style="top: 85%; text-decoration: none; color: #c1ced9">
                             Learn more <i class="fa-solid fa-angle-right"></i>
                         </a>
@@ -150,8 +150,8 @@
                             Airpods Repair
                         </h2>
                         <a class="position-absolute"
-                           href="#"
-                           style="top: 85%; text-decoration: none; color: #c1ced9">
+                           href="accessoriesRepair.html"
+                           style="top: 85%; text-decoration: none; color: #c1ced9;  text-shadow: none">
                             Learn more <i class="fa-solid fa-angle-right"></i>
                         </a>
                     </div>
@@ -162,8 +162,8 @@
                             iPad Repair
                         </h2>
                         <a class="position-absolute"
-                           href="#"
-                           style="top: 85%; text-decoration: none; color: #c1ced9">
+                           href="accessoriesRepair.html"
+                           style="top: 85%; text-decoration: none; color: #c1ced9; text-shadow: none">
                             Learn more <i class="fa-solid fa-angle-right"></i>
                         </a>
                     </div>
@@ -179,86 +179,103 @@
                     iPhone Repair
                 </h1>
 
-
-                <button class="position-absolute"
-                        style="top: 80%;">
-                    Learn more
-                </button>
+                <a class="position-absolute"
+                   href="iPhoneRepair.html"
+                   style="top: 80%">
+                    <button type="button">
+                        Learn more
+                    </button>
+                </a>
             </div>
         </section>
     </main>
 
- <!-- Footer -->
-<footer class="py-5 px-5 bg-dark text-white">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="copyright">
-                    <p>&copy; 2023 Cybercore Technology, Inc. All rights reserved.</p>
-                    <p id="datetime"></p>
+     <!-- Footer -->
+    <footer class="py-5 px-5 bg-dark text-white">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="copyright">
+                        <p>&copy; 2023 CyberCore Technology, Inc. All rights reserved.</p>
+                        <p id="datetime"></p>
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-6">
-                <div class="d-flex justify-content-between">
-                    <div class="social-media">
-                        <p class="mb-4">Connect with us on social media:</p>
-                        <div class="social-media-icons">
-                            <a href="https://www.facebook.com/"><img src="images/facebook.png" alt="Facebook"></a>
-                            <a href="https://twitter.com/?lang=en"><img src="images/logotipo-de-twitter.png" alt="Twitter"></a>
-                            <a href="https://www.instagram.com/"><img src="images/instagram.png" alt="Instagram"></a>
+                <div class="col-md-6">
+                    <div class="d-flex justify-content-between">
+                        <div class="social-media">
+                            <p class="mb-4">Connect with us on social media:</p>
+                            <div class="social-media-icons">
+                                <a href="https://www.facebook.com/"><img src="images/facebook.png" alt="Facebook"></a>
+                                <a href="https://twitter.com/?lang=en"><img src="images/logotipo-de-twitter.png" alt="Twitter"></a>
+                                <a href="https://www.instagram.com/"><img src="images/instagram.png" alt="Instagram"></a>
+                            </div>
+                        </div>
+
+                        <div class="col-6 col-md-4 mb-3">
+                            <form class="subscribe-form mt-3">
+                                <h5>Subscribe to our newsletter</h5>
+                                <p>Monthly digest of what's new and exciting from us.</p>
+                                <div class="d-flex flex-column w-100 gap-2">
+                                    <label for="newsletter1" class="visually-hidden">Email address</label>
+                                    <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
+                                    <button class="btn btn-primary mt-2" type="button">Subscribe</button>
+                                </div>
+                            </form>
                         </div>
                     </div>
+                </div>
+            </div>
 
-                    <div class="col-6 col-md-4 mb-3">
-                        <form class="subscribe-form mt-3">
-                            <h5>Subscribe to our newsletter</h5>
-                            <p>Monthly digest of what's new and exciting from us.</p>
-                            <div class="d-flex flex-column w-100 gap-2">
-                                <label for="newsletter1" class="visually-hidden">Email address</label>
-                                <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
-                                <button class="btn btn-primary mt-2" type="button">Subscribe</button>
-                            </div>
-                        </form>
-                    </div>
+            <div class="row mt-4">
+                <div class="col-md-6">
+                    <ul class="list-unstyled d-flex justify-content-end">
+                        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
+                        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
+                        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="row mt-4">
+                <div class="col-md-6">
+                    <h5>Quick links</h5>
+                    <ul class="nav flex-column">
+                        <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-white">Home</a></li>
+                        <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-white">Features</a></li>
+                        <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-white">Pricing</a></li>
+                        <li class="nav-item mb-2"><a href="service.html" class="nav-link p-0 text-white">FAQs</a></li>
+                        <li class="nav-item mb-2"><a href="About.html" class="nav-link p-0 text-white">About</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
+    </footer>
 
-        <div class="row mt-4">
-            <div class="col-md-6">
-                <ul class="list-unstyled d-flex justify-content-end">
-                    <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
-                    <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
-                    <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
-                </ul>
-            </div>
-        </div>
+<!--    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">-->
+<!--        <div class="col-md-4 d-flex align-items-center">-->
+<!--            <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">-->
+<!--                <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>-->
+<!--            </a>-->
+<!--            <span class="mb-3 mb-md-0 text-body-secondary">© 2023 Company, Inc</span>-->
+<!--        </div>-->
 
-        <div class="row mt-4">
-            <div class="col-md-6">
-                <h5>Quick links</h5>
-                <ul class="nav flex-column">
-                    <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-white">Home</a></li>
-                    <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-white">Features</a></li>
-                    <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-white">Pricing</a></li>
-                    <li class="nav-item mb-2"><a href="service.html" class="nav-link p-0 text-white">FAQs</a></li>
-                    <li class="nav-item mb-2"><a href="About.html" class="nav-link p-0 text-white">About</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</footer>
+<!--        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">-->
+<!--            <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>-->
+<!--            <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>-->
+<!--            <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>-->
+<!--        </ul>-->
+<!--    </footer>-->
 
-<script>
-    // JavaScript Automated Date 
-    function updateDateTime() {
-        var currentDateTime = new Date();
-        var formattedDateTime = currentDateTime.toLocaleString();
-        document.getElementById('datetime').innerHTML = formattedDateTime;
-    }
 
-    setInterval(updateDateTime, 1000);
-</script>
+    <script>
+        // JavaScript Automated Date
+        function updateDateTime() {
+            let currentDateTime = new Date();
+            document.getElementById('datetime').innerHTML = currentDateTime.toLocaleString();
+        }
+
+        setInterval(updateDateTime, 1000);
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </div>
