--- a/macRepair.html
+++ b/macRepair.html
@@ -167,8 +167,9 @@
             setInterval(() => nextSlide(macImages, currentMacSlide, macSlideshowContainer, (index) => currentMacSlide = index), 2000);
             setInterval(() => nextSlide(secondSlideshowImages, currentSecondSlide, secondSlideshowContainer, (index) => currentSecondSlide = index), 2000);
         </script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </main>
-    
+
     <!-- Footer -->
     <footer class="py-5 px-5 bg-dark text-white">
         <div class="container">
@@ -240,7 +241,8 @@
 
         setInterval(updateDateTime, 1000);
     </script>
+</div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-pzjw8f+9PEA8E3p6rKKnK2sZtW07RPZcu3N7WWWg5q1QIqrnjOyqQ1LQGxXuIhH" crossorigin="anonymous"></script>
+
 </body>
 </html>
