google map fixed

--- a/contact.html
+++ b/contact.html
@@ -88,19 +88,20 @@
     <h1>Get in touch</h1>
 
     <!--map and text-->
-    <div id="map-and-text-container">
-        <div id="map-container">
-            <div id="map"></div>
-        </div>
-
-        <div id="text-container">
-            <div id="text">
-                <h2>Headquarters</h2>
-                <p>95 N 300 W, Salt Lake City, UT 84101</p><br>
-                <h2>Phone</h2>
-                <p>(801) 524-8100</p><br>
-                <h2>Email</h2>
-                <p>contact@cybercore.com</p>
+    <div class="map-container m-0 w-100">
+        <div class="row w-100 m-0">
+            <div class="col-6" style="height: 400px;">
+                <div id="map" class="w-100 h-100"></div>
+            </div>
+            <div class="col-6" style="height: 400px;">
+                <div id="text" class="w-100 h-100">
+                    <h2>Headquarters</h2>
+                    <p>95 N 300 W, Salt Lake City, UT 84101</p><br>
+                    <h2>Phone</h2>
+                    <p>(801) 524-8100</p><br>
+                    <h2>Email</h2>
+                    <p>contact@cybercore.com</p>
+                </div>
             </div>
         </div>
     </div>
