--- a/index.html
+++ b/index.html
@@ -279,6 +279,19 @@
         setInterval(updateDateTime, 1000);
     </script>
 
+    <script>
+        $(document).ready(function() {
+            $('#DiscountCode').click(function() {
+                let text = "HOLIDAY";
+                navigator.clipboard.writeText(text).then(function() {
+                    alert('Discount code copied');
+                }, function(err) {
+                    alert('Failed to copy text: ', err);
+                });
+            });
+        });
+    </script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </div>
 
