google map fixed

--- a/team.html
+++ b/team.html
@@ -137,7 +137,7 @@
         <h4>Chief Information Security Officer</h4>
       </figcaption>
     </figure>
-    <div class="comment-form">
+    <div class="comment-form mb-5">
       <h2>Tell Us Your Story</h2>
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" required>
