--- a/contact.html
+++ b/contact.html
@@ -93,7 +93,7 @@
     <div class="map-container m-0 w-100">
         <div class="row w-100 m-0">
             <div class="col-6" style="height: 400px;">
-                <div id="map" class="w-100 h-100"></div>
+                <div id="map" class="w-100 h-100 rounded-2"></div>
             </div>
             <div class="col-6" style="height: 400px;">
                 <div id="text" class="w-100 h-100">
@@ -109,7 +109,7 @@
     </div>
 
     <!--three boxes under the map-->
-    <div id="additional-boxes">
+    <div id="additional-boxes" class="pb-4 w-100">
         <div class="additional-box">
             <h2>Sales</h2>
             <p>Let's chat with our sales team.</p>
